# edurisk

./: .gitignore  README.md  pyproject.toml
app_streamlit/: app.py  requirements.txt
data/processed/: data_processed.parquet  data_processed.parquet.sha256
data/test/: test.parquet
data/train/: train.parquet
docs/: EduRisk_Documentacion_Completa.html  ds.pptx  memoria.md  negocio.pptx
models/: final_model.pkl.sha256  final_model_metadata.json  trained_model_extratrees.pkl  trained_model_gradientboosting.pkl  trained_model_kmeans.pkl  trained_model_kmeans.pkl.sha256  trained_model_logisticregression.pkl  trained_model_randomforest.pkl  trained_model_xgboost.pkl
notebooks/: 01_Fuentes.ipynb  02_LimpiezaEDA.ipynb  03_Entrenamiento_Evaluacion.ipynb
src/: evaluation.py  training.py  utils.py
